# cmake_note

./: README.md
cmake10_cmake/: CMakeLists.txt  run.sh
cmake10_cmake/module2/src/: p2.cpp
cmake10_module_cmake/cmake/: module1.cmake  module2.cmake
cmake10_module_cmake/demo/: main.cpp
cmake10_module_cmake/module1/include/: p1.h
cmake10_module_cmake/module1/src/: p1.cpp
cmake11_compile_definitions/: CMakeLists.txt  run.sh
cmake11_compile_definitions/src/: main.cpp
cmake12_set/: CMakeLists.txt  run.sh
cmake12_set/sub/: CMakeLists.txt
cmake13_project/: CMakeLists.txt  run.sh
cmake13_project/sub/: CMakeLists.txt
cmake14_custom_command/: CMakeLists.txt  run.sh
cmake15_function_macro/: CMakeLists.txt  run.sh
cmake1_base/: CMakeLists.txt  run.sh
cmake2_install_doc/: CMakeLists.txt  COPYRIGHT
cmake3_library/: CMakeLists.txt  run.sh
cmake3_library/include/: hello.h
cmake3_library/src/: hello.cpp
cmake4_use_libarary/src/: main.cpp
cmake5_option_if/: CMakeLists.txt  run.sh
cmake5_option_if/src/: hello.cpp
cmake6_compiler/: CMakeLists.txt
cmake6_compiler/src/: hello.cpp  main.cpp
cmake7_gdb_debug/: CMakeLists.txt
cmake7_gdb_debug/src/: main.cpp
cmake8_vscode_debug/: CMakeLists.txt  run.sh
cmake8_vscode_debug/src/: main.cpp
cmake9_target_NOT_DONE/: CMakeLists.txt
cmake9_target_NOT_DONE/src/: _zzz.cpp  main.cpp
cmakeZ_other_command/: CMakeLists.txt
cmake_base/: CMakeLists.txt  run.sh
cmake_install_doc/: run_hello.sh
cmake_install_doc/doc/: hello.txt
cmake_install_doc/src/: hello.cpp
cmake_library/: CMakeLists.txt
cmake_use_libarary/: CMakeLists.txt
test/: CMakeLists.txt  main.cpp
test/include/: a.h
test/src/include/: b.h
test/src/src/: main.cpp
